@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.ibissource</groupId>
+	<groupId>org.frankframework</groupId>
 	<artifactId>ibis-adapterframework-parent</artifactId>
 	<version>${revision}</version>
 	<packaging>pom</packaging>
@@ -19,7 +19,7 @@
 		<jackson.version>2.16.0</jackson.version>
 		<cxf.version>3.6.2</cxf.version>
 		<spring.version>5.3.31</spring.version>
-		<spring-security.version>5.8.8</spring-security.version>
+		<spring-security.version>5.8.9</spring-security.version>
 		<spring-integration.version>5.5.20</spring-integration.version>
 
 		<btm.version>3.0.0-mk1</btm.version>
@@ -28,7 +28,7 @@
 		<micrometer.version>1.12.1</micrometer.version>
 		<argLine /> <!-- add empty default argLine so Surefire won't fail when JaCoCo isn't present -->
 		<!-- property [iaf.rootdir] is available to get the root of the project, because of the [directory-maven-plugin] -->
-		<frankdoc.version>1.2-SNAPSHOT</frankdoc.version>
+		<frankdoc.version>2.0-SNAPSHOT</frankdoc.version>
 		<javadoc-plugin.version>3.6.3</javadoc-plugin.version>
 
 		<!-- DB Driver Versions -->
@@ -39,7 +39,7 @@
 		<mssql.driver.version>12.4.2.jre11</mssql.driver.version>
 		<mysql.driver.version>8.2.0</mysql.driver.version>
 		<!-- Should upgrade to new MariaDB driver 3.1.4, 3.2.0 or newer for JDK17 support but currently not working with XA transaction managers in the framework. -->
-		<mariadb.driver.version>3.3.1</mariadb.driver.version>
+		<mariadb.driver.version>3.3.2</mariadb.driver.version>
 		<postgresql.driver.version>42.7.1</postgresql.driver.version>
 		<mongodb.driver.version>4.11.1</mongodb.driver.version>
 
@@ -131,7 +131,7 @@
 			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-transport-native-epoll</artifactId>
-				<version>4.1.103.Final</version>
+				<version>4.1.104.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
@@ -141,148 +141,148 @@
 			<!-- End Lock transient deps -->
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-commons</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-security</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>iaf-management-gateway</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>credentialprovider</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-tibco</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-sap</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-messaging</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-larva</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-akamai</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-cmis</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-frontend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-backend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-webapp</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-webapp</artifactId>
 				<version>${project.version}</version>
 				<type>war</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-ear</artifactId>
 				<version>${project.version}</version>
 				<type>ear</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-test</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-test-integration</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-idin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-ladybug</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-aspose</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-aws</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-dbms</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>nn-specials</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-batch</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>bundle-minimal</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>bundle-full</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
@@ -656,7 +656,7 @@
 					<excludes>
 						<exclude>it.**</exclude>
 					</excludes>
-					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit</argLine>
+					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit --add-opens java.base/java.io=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -796,7 +796,7 @@
 							<configuration>
 								<property>iaf.rootdir</property>
 								<project>
-									<groupId>org.ibissource</groupId>
+									<groupId>org.frankframework</groupId>
 									<artifactId>ibis-adapterframework-parent</artifactId>
 								</project>
 							</configuration>
@@ -1376,13 +1376,17 @@
 								<artifactId>frank-doc-frontend</artifactId>
 								<version>${frankdoc.version}</version>
 							</frontendArtifact>
+							<additionalJOptions>
+								<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalJOption>
+								<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalJOption>
+							</additionalJOptions>
 							<additionalOptions>
 								<additionalOption>-outputDirectory</additionalOption>
 								<additionalOption>${project.build.directory}/frankdoc</additionalOption>
 								<additionalOption>-digesterRulesPath</additionalOption>
 								<additionalOption>${project.basedir}/core/src/main/resources/digester-rules.xml</additionalOption>
 								<additionalOption>-rootClass</additionalOption>
-								<additionalOption>nl.nn.adapterframework.configuration.Configuration</additionalOption>
+								<additionalOption>org.frankframework.configuration.Configuration</additionalOption>
 								<additionalOption>-frankFrameworkVersion</additionalOption>
 								<additionalOption>${project.version}</additionalOption>
 							</additionalOptions>
